--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
             "error",
             "always"
         ], 
-		"no-console": "off"
+		"no-console": "off",
+		"no-unused-vars":"off"
     }
 }
