--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.22.2",
+    "babel-loader": "^6.2.10",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0"	
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "server": "nodemon --watch server --exec babel-node  -- server/index.js"
