--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
     "nodemon": "^1.11.0",
+    "react-hot-loader": "^1.3.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0"	
+    "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "express": "^4.14.1",
