--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
   },
   "dependencies": {
     "express": "^4.14.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2"
   },
   "scripts": {
-    "server": "nodemon --watch server --exec babel-node  -- server/index.js"
+    "start": "nodemon --watch server --exec babel-node  -- server/index.js"
   }
 }
