--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "nodemon --watch server --exec babel-node  -- server/index.js"
