--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "0.12.0",
+    "body-parser": "^1.16.0",
+    "classnames": "^2.2.5",
     "express": "^4.14.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
@@ -26,7 +28,8 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "validator": "^6.2.1"
   },
   "scripts": {
     "start": "nodemon --watch server --exec babel-node  -- server/index.js"
