--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
             "always"
         ], 
 		"no-console": "off",
-		"no-unused-vars":"off"
+		"no-unused-vars":"off",
+		"no-undef":"off"
     }
 }
