Lesson 11: Flash Messages Reducer (Part 2)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         ], 
 		"no-console": "off",
 		"no-unused-vars":"off",
-		"no-undef":"off"
+		"no-undef":"off",
+		"no-case-declarations": "off"
     }
 }
