Lesson 13: User Sign up: Uniqueness Validation (Part 1)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
         ], 
 		"no-console": "off",
 		"no-unused-vars":"off",
-		"no-undef":"off",
+		"no-undef":"warn",
 		"no-case-declarations": "off"
     }
 }
