--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bookshelf": "^0.10.3",
     "classnames": "^2.2.5",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.3.0",
     "knex": "^0.12.6",
     "lodash": "^4.17.4",
     "pg": "^6.1.2",
